public/kube_files/loki-middleware.yaml
# if you have to make it public add a middleware to restrict access 
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: loki-ipwhitelist
  namespace: monitoring
spec:
  ipAllowList:
    sourceRange:
      - 100.64.0.0/10 # Tailscale/Headscale range
      - 127.0.0.1/32 # localhost
      - 192.168.5.0/24 # Local network range (adjust as needed)
