public/kube_files/romm-externla-service.yaml
---
# 1. Romm Headless Service
apiVersion: v1
kind: Service
metadata:
  name: romm-bridge
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
---
# 2. Romm Manual Endpoint
apiVersion: v1
kind: Endpoints
metadata:
  name: romm-bridge
  namespace: default
subsets:
  - addresses:
      - ip: YOUR_ROMM_IP 
    ports:
      - port: 80
---
# 3. Romm Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
    external-dns.alpha.kubernetes.io/target: "YOUR_IP"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - your-romm-domain.com
      secretName: romm-tls
  rules:
    - host: your-romm-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: romm-bridge
                port:
                  number: 8080
